# IFC-Converter

./: .coverage  .gitignore  BUILD.md  README.md  RELEASE.md  cli.py  main.py  main.spec  project.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  codeql.yml  release.yml
core/: __init__.py  analyze.py  batch.py  convert.py  cropping.py  errors.py  filtering.py  paths.py  pipeline.py  postprocess.py  report.py  styling.py  usdz.py
documentation/: 00-system-overview.md  01-architecture-e2e.md  02-defects-and-remedies.md  03-ingestion-streaming.md  04-filtering-coloring.md  05-spatial-cropping.md  06-conversion-pipeline.md  07-ar-output-units-draco.md  08-batch-threading-ui.md  09-licensing-security.md  10-packaging-distribution.md  11-error-handling-reporting.md  12-build-order-verification.md  13-implementation-plan.md  FINDINGS-SUMMARY.md  README.md  STATUS.md
documentation/acceptance/: ACCEPTANCE-EVIDENCE.md
evaluation/: evaluation-evidence-WINDOWS-VM.md
evaluation/logs/: cli.txt  conversion_report.txt  host.txt  ram.txt  selftest.txt  sha256.txt
hooks/: README.md
licensing/: __init__.py  clockguard.py  core.py  public_key.pem
scripts/: _qa_license.py  acceptance_report.py  cli_exit_codes.py  diskfull_check.ps1  draco_check.py  fetch_binaries.py  make_release.ps1  obfuscate_licensing.py  vendor_wheels.py
tests/: glbtools.py  validate_core.py  validate_errors.py  validate_phaseb.py  validate_ui.py
tools/: keygen.py  sign_license.py
ui/: __init__.py  license_window.py  main_window.py  theme.py  worker.py
(+4 files in other folders)
