[project]
name = "ifc-converter"
version = "0.1.0"
description = "IFC Spatial Cropping & AR Suite — batch IFC -> STP/GLB with filtering, cropping, color coding, licensing."
requires-python = ">=3.11,<3.12"

# Direct runtime dependencies (source of truth). Exact-pinned per spec §2/§8.1.
# The fully-resolved, hash-locked set lives in requirements.txt (compiled by pip-tools on Python 3.11).
dependencies = [
    "ifcopenshell==0.8.5",
    "numpy>=2.0",          # exact version resolved/locked on Python 3.11 (2.5.0 is 3.12-only)
    "PySide6==6.11.1",
    "qt-material==2.17",
    "cryptography==49.0.0",
    "py-machineid==1.0.0",
]

[project.optional-dependencies]
# Build/test tooling (not shipped in the runtime bundle). Locked into requirements-dev.txt.
dev = [
    "pyinstaller==6.21.0",
    "pip-tools==7.5.1",
    "ruff==0.14.4",
]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E741"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E402"]   # tests bootstrap sys.path before importing project modules
